Fix overflow (scrolling) on html and body tags

--- a/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/content.css
+++ b/components/com_jce/editor/tiny_mce/themes/advanced/skins/default/content.css
@@ -1,4 +1,5 @@
-html, body{height:100%;}
+html {overflow: inherit !important;}
+body{height:100%;overflow: auto;}
 .mceContentBody{height:100%;min-width:90%;padding:5px;}
 body, td, pre {color:#000; font-family:Verdana, Arial, Helvetica, sans-serif; font-size:11px; margin:8px;}
 body {background:#FFF;}
